Revert "Fix render.yaml: backend only, remove unsupported static type"
This reverts commit f3b68b3ebf9153784827b83f273356bfd665acbb.

--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-# Render Blueprint — backend only (frontend is deployed on Vercel)
+# Render Blueprint — defines both services in one file.
 # Docs: https://render.com/docs/blueprint-spec
 
 services:
@@ -12,6 +12,20 @@ services:
     startCommand: node server/index.js
     envVars:
       - key: MONGODB_URI
-        sync: false
+        sync: false   # set manually in the Render dashboard
+
+  # ── Frontend: React static site ────────────────────────────────────────────
+  - type: static
+    name: chatapp-frontend
+    plan: free
+    buildCommand: npm install && ./node_modules/.bin/react-scripts build
+    staticPublishPath: ./build
+    envVars:
       - key: REACT_APP_GEMINI_API_KEY
-        sync: false
+        sync: false   # set manually — baked into JS bundle at build time
+      - key: REACT_APP_API_URL
+        sync: false   # set to the backend URL, e.g. https://chatapp-backend.onrender.com
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
